<resources>
    <string name="app_name">ShopLine</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="submit">Verify Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_a_account_to_view_product_or_place_order">Create a Account to View Product
        and Place Order</string>
    <string name="otp">OTP</string>
    <string name="submit2">Submit</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="navigation_open">Open Navigation</string>
    <string name="navigation_close">Close Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="note"><b>NOTE: </b>If you are Unable to receive <b>OTP</b>, Please Restart Your Device.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="place_order">Place Order</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="username">Username</string>
    <string name="cooking_essentials">Cooking Essentials</string>
    <string name="beauty_and_grooming">Beauty and Grooming</string>
    <string name="dairy_products">Dairy Products</string>
</resources>