<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.UploadUserDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:text="@string/first_name"
            android:textColor="@color/red"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:text="@string/last_name"
            android:textColor="@color/red"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/red"
        android:padding="15dp"
        android:text="@string/submit2"
        android:textAlignment="center"
        android:textColor="#eee"
        android:textSize="25sp" />
</LinearLayout>