<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/frag_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />


        <Button
            android:id="@+id/changDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:background="@color/buttonColor"
            android:padding="10dp"
            android:text="@string/change_profile_image"
            android:textColor="#eee" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll"
        android:background="@android:color/black"
        />

    <RelativeLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginTop="5dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="Name:"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

        <ImageButton
            android:id="@+id/editName"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit" />

        <TextView
            android:id="@+id/frag_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:text="@string/first_name"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll1"
        android:background="@android:color/black"
        />

    <RelativeLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_marginTop="5dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="Email:"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

        <ImageButton
            android:id="@+id/editEmail"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit" />

        <TextView
            android:id="@+id/frag_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv2"
            android:text="gmail.com"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll2"
        android:background="@android:color/black"
        />
    <RelativeLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll2"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="Phone:"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/frag_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv3"
            android:text="+111111111"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll3"
        android:background="@android:color/black"
        />
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:padding="10dp"
        android:text="@string/log_out"
        android:textColor="#eee"
        android:textSize="24sp"
        android:textStyle="italic" />
</RelativeLayout>