<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="6dp">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_marginBottom="15dp"
            android:background="@drawable/black"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_below="@+id/t"
                android:background="@drawable/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cooking_essentials"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


            <ImageView
                android:id="@+id/t"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/q" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container1"
            android:layout_marginBottom="15dp"
            android:background="@drawable/black"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_below="@+id/t1"
                android:background="@drawable/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/beauty_and_grooming"
                android:textColor="#eee"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/q" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container2"
            android:layout_marginBottom="15dp"
            android:background="@drawable/black"
            android:padding="5dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_below="@+id/t2"
                android:background="@drawable/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/dairy_products"
                android:textColor="#eee"
                android:textSize="24sp" />


            <ImageView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/q" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container3"
            android:layout_marginBottom="15dp"
            android:background="@drawable/black"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_below="@+id/t3"
                android:layout_marginBottom="5dp"
                android:background="@drawable/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="Ice-Cream"
                android:textColor="#eee"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/q" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container4"
            android:layout_marginBottom="15dp"
            android:background="@drawable/black"
            android:padding="5dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_below="@+id/t4"
                android:background="@drawable/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="Housing Need"
                android:textColor="#eee"
                android:textSize="24sp" />


            <ImageView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/q" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container5"
            android:layout_marginBottom="15dp"
            android:background="@drawable/black"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_below="@+id/t5"
                android:background="@drawable/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="Packaged Food"
                android:textColor="#eee"
                android:textSize="24sp" />


            <ImageView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/q" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>